syntax = "proto3";

package grpc.model;

message Speech {
  bool enabled = 1;
  int32 voice_index = 2;
}

message Asset {
	enum MediaExtension {
		UNSPECIFIED = 0;
		MP3 = 1;
		MP4 = 2;
	}

  string id = 1;
  string name = 2;
  string file_name = 3;
  int32 volume = 4;
  MediaExtension media_extension = 5;
}

message Reward {
  string id = 1;
  string title = 2;
  string prompt = 3;
  string image_url = 4;
  string background_color = 5;
  string streamer_id = 6;
  Speech speech = 7;
  repeated Asset assets = 8;
}